# kraftwerk

./: .clang-format  CMakeLists.txt  README.md
include/melon/: GradientDescent.h  LinearModel.h  LinearRegression.h  LogisticModel.h  LogisticRegression.h  Random.h  Regression.h  Types.h
test/: CMakeLists.txt  TestGradientDescent.cpp  TestLinearModel.cpp  TestLinearRegression.cpp  TestLogisticRegression.cpp  TestRandom.cpp  TestTypes.cpp
